--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -31,3 +31,8 @@ body {
   transition: clip-path 0.6s cubic-bezier(0.165, 0.84, 0.44, 1),
     -webkit-clip-path 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
+
+.height-full {
+  min-height: -webkit-fill-available;
+  min-height: 100vh;
+}
