--- a/src/style/globals.css
+++ b/src/style/globals.css
@@ -3,6 +3,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+:root {
+  --vh: 1vh;
+}
+
 html,
 body {
   @apply font-arch-regular;
@@ -38,6 +42,6 @@ body {
 }
 
 .height-full {
-  min-height: -webkit-fill-available;
-  min-height: 100vh;
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
 }
